force-app/main/default/objects/ServiceContract/fields/Acess_rios__c.field-meta.xml
<CustomField>
    <fullName>Acess_rios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acessórios</label>
    <type>Checkbox</type>
</CustomField>