force-app/main/default/objects/ServiceContract/fields/conta_dias__c.field-meta.xml
<CustomField>
    <fullName>conta_dias__c</fullName>
    <formula>EndDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta Dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>