force-app/main/default/objects/ServiceContract/fields/Ensaio_de_Seg_El_trica__c.field-meta.xml
<CustomField>
    <fullName>Ensaio_de_Seg_El_trica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ensaio de Seg. Elétrica</label>
    <type>Checkbox</type>
</CustomField>