force-app/main/default/objects/ServiceContract/fields/Faturamento_feito__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_feito__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Faturamento feito</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos Feitos (de contratos de serviço)</relationshipLabel>
    <relationshipName>Contratos_de_Servi_o</relationshipName>
    <type>Lookup</type>
</CustomField>