force-app/main/default/objects/ServiceContract/fields/Locador__c.field-meta.xml
<CustomField>
    <fullName>Locador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locador(a)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Serviço</relationshipLabel>
    <relationshipName>Contratos_de_Servi_o</relationshipName>
    <type>Lookup</type>
</CustomField>