force-app/main/default/objects/ServiceContract/fields/Locat_rio_a__c.field-meta.xml
<CustomField>
    <fullName>Locat_rio_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locatário(a)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Serviço (Locatário(a))</relationshipLabel>
    <relationshipName>Contratos_de_Servi_o1</relationshipName>
    <type>Lookup</type>
</CustomField>