force-app/main/default/objects/ServiceContract/fields/N_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>N_do_Contrato__c</fullName>
    <label>Nº do Contrato</label>
    <length>120</length>
    <type>Text</type>
</CustomField>