force-app/main/default/objects/ServiceContract/fields/N_do_Processo__c.field-meta.xml
<CustomField>
    <fullName>N_do_Processo__c</fullName>
    <label>Nº do Processo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>