force-app/main/default/objects/ServiceContract/fields/Observa_es__c.field-meta.xml
<CustomField>
    <fullName>Observa_es__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>