force-app/main/default/objects/ServiceContract/fields/Pe_as__c.field-meta.xml
<CustomField>
    <fullName>Pe_as__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peças</label>
    <type>Checkbox</type>
</CustomField>