force-app/main/default/objects/ServiceContract/fields/prazo_restante__c.field-meta.xml
<CustomField>
    <fullName>prazo_restante__c</fullName>
    <formula>IF(
	conta_dias__c  &gt; 1,
	TEXT(conta_dias__c ) &amp; &quot; Dias p/ Vencer&quot;,
	IF(
		conta_dias__c  = 1,
		&quot;Vence Amanhã&quot;,
		IF(
			conta_dias__c  = 0,
			&quot;Vence Hoje&quot;,
			IF(
                conta_dias__c  = -1,
                TEXT(conta_dias__c *(-1)) &amp; &quot; Dia Vencido&quot;,
                TEXT(conta_dias__c *(-1)) &amp; &quot; Dias Vencido&quot;
            )
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo Restante</label>
    <type>Text</type>
</CustomField>