force-app/main/default/objects/ServiceContract/fields/Tipo_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Servi_o__c</fullName>
    <label>Tipo de Serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMODATO</fullName>
            </value>
            <value>
                <fullName>LOCAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>