force-app/main/default/objects/ServiceContract/recordTypes/LOCA_O.recordType-meta.xml
<RecordType>
    <fullName>LOCA_O</fullName>
    <active>true</active>
    <description>CONTRATO DESTINADO A SERVIÇOS DE LOCAÇÃO.</description>
    <label>LOCAÇÃO</label>
</RecordType>