force-app/main/default/objects/ServiceContract/recordTypes/Servi_os.recordType-meta.xml
<RecordType>
    <fullName>Servi_os</fullName>
    <active>true</active>
    <description>CONTRATO DESTINADO À SERVIÇOS EM GERAL COMO: CALIBRAÇÃO, MANUTENÇÃO ETC.</description>
    <label>SERVIÇOS</label>
</RecordType>