force-app/main/default/objects/ServiceContract/listViews/Contrato_de_servi_o_Venc_ou_Inati.listView-meta.xml
<ListView>
    <fullName>Contrato_de_servi_o_Venc_ou_Inati</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>prazo_restante__c</columns>
    <columns>CONTRACT.STATUSINDICATOR</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.Servi_os</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>contains</operation>
        <value>Vencido</value>
    </filters>
    <label>Contratos de Serviço Vencidos</label>
</ListView>