force-app/main/default/objects/ServiceContract/listViews/Contratos_de_Loca_o_Vencidos.listView-meta.xml
<ListView>
    <fullName>Contratos_de_Loca_o_Vencidos</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>prazo_restante__c</columns>
    <columns>CONTRACT.STATUSINDICATOR</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.LOCA_O</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>contains</operation>
        <value>Vencido</value>
    </filters>
    <label>Contratos de Locação Vencidos</label>
</ListView>