force-app/main/default/objects/ServiceContract/listViews/Contratos_Loca_o_Ativos.listView-meta.xml
<ListView>
    <fullName>Contratos_Loca_o_Ativos</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>prazo_restante__c</columns>
    <columns>CONTRACT.STATUSINDICATOR</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.LOCA_O</value>
    </filters>
    <label>Contratos de Locação Ativos</label>
</ListView>