force-app/main/default/objects/ServiceContract/listViews/Todos_os_Contratos_de_Servi_o.listView-meta.xml
<ListView>
    <fullName>Todos_os_Contratos_de_Servi_o</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>prazo_restante__c</columns>
    <columns>CONTRACT.STATUSINDICATOR</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os Contratos</label>
</ListView>